--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ p {
     margin: 0;
     margin-bottom: 0rem;
     color: var(--text, #fff);
+    height: 1.2rem;
+}
+
+span {
+    height: 1.2rem;
 }
 
 a {
