--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ p {
     margin: 0;
     margin-bottom: 0rem;
     color: var(--text, #fff);
-    height: 1.2rem;
+    min-height: 1.2rem;
 }
 
 span {
