--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,11 @@ p {
     margin: 0;
     margin-bottom: 0rem;
     color: var(--text, #fff);
-    min-height: 1.2rem;
+    min-height: 1.25rem;
 }
 
 span {
-    height: 1.2rem;
+    min-height: 1.25rem
 }
 
 a {
