--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,30 @@
     }
 }
 
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes disappear {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 html {
     padding: 0;
     margin: 0;
     max-width: 100%;
     font-size: 1.2rem;
-    font-family: Ubuntu Mono;
+    font-family: Ubuntu Mono, monospace, sans-serif;
     font-weight: 500;
     background-color: var(--background, #000);
     overflow: wrap;
@@ -47,12 +65,20 @@ body::-webkit-scrollbar {
 }
 
 #window {
+    animation: appear steps(1) 1s forwards;
     box-sizing: border-box;
     padding: 1rem;
     margin: 0;
     width: 100%;
     height: 100%;
     overflow: wrap;
+}
+
+#loading {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    animation: disappear steps(1) 1s forwards;
 }
 
 br {
