Add z-index to command prompt span and music help message update

--- a/css/music.css
+++ b/css/music.css
@@ -89,6 +89,7 @@ li {
     /* Ensure padding is included in the width */
     overflow-x: hidden;
     /* Prevent horizontal overflow */
+    z-index: 2;
 }
 
 #seekbar-container {
